snackbar z-index bug fixed

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -101,6 +101,7 @@
         background-color: var(--color-grey-dark-1);
         width: 180%;
         padding: 1rem;
+        z-index: 20;
     }
 
     &__icon{
